# obelisk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: frag-es3.glslf  frag.glslf  map.tmx  vertex-es3.glslv  vertex.glslv
cmake/: FindAPG.cmake
include/: MonsterStat.hpp  ObeliskCard.hpp  ObeliskMap.hpp  ObeliskState.hpp  UpgradeType.hpp  obelisk.hpp
include/components/: AnnotationComponent.hpp  AttackComponent.hpp  CardComponent.hpp  CarriedComponent.hpp  CarryableComponent.hpp  ClickableComponent.hpp  ColorComponent.hpp  DeathComponent.hpp  DeckComponent.hpp  IntensificationComponent.hpp  MonsterComponent.hpp  MoveComponent.hpp  PositionComponent.hpp  RenderableComponent.hpp  ToastComponent.hpp  TowerComponent.hpp  TowerUpgradeComponent.hpp  TrashComponent.hpp  WalkerComponent.hpp
include/systems/: CarrySystem.hpp  DeathSystem.hpp  EntitySpawnSystem.hpp  IntensificationSystem.hpp  MovementSystem.hpp  PlayerInputSystem.hpp  RenderSystem.hpp  ToastSystem.hpp  TowerAttackSystem.hpp  TowerUpgradeSystem.hpp  WalkingSystem.hpp
raw-assets/: cards.xcf  speed_upgrade.xcf
scripts/: bundle-wasm.sh  ideas.py
src/: ObeliskCard.cpp  ObeliskMap.cpp  obelisk.cpp
src/components/: PositionComponent.cpp  RenderableComponent.cpp
src/systems/: CarrySystem.cpp  DeathSystem.cpp  EntitySpawnSystem.cpp  IntensificationSystem.cpp  MovementSystem.cpp  PlayerInputSystem.cpp  RenderSystem.cpp  ToastSystem.cpp  TowerAttackSystem.cpp  TowerUpgradeSystem.cpp  WalkingSystem.cpp
